# emotion_robot

./: README.md
src/base_moving/: README.md
src/base_moving/base/spark_base/: CMakeLists.txt
src/base_moving/driver/: install.sh
src/base_moving/mv_base_v01/: CMakeLists.txt  package.xml
src/base_moving/mv_base_v01/src/: listen_cmd.cpp  orcDis.py  stepDis.cpp
src/camera/ros_astra_camera/: CMakeLists.txt
src/cc_dec/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/cc_dec/src/: sub.cpp  sub.cpp~
src/face_system/: CMakeLists.txt  package.xml
src/face_system/data/: 1001.txt
src/face_system/src/: face_baiduapipy  facedetect.py  video.py
src/voice_system/: readme.txt  userwords.txt
src/voice_system/launch/: voice_system.launch
src/voice_system/src/: tuling_nlu.cpp  vs_start.cpp  xf_asr.cpp  xf_tts.cpp
